cmake_minimum_required(VERSION 2.8)

project(XdevLAudioCoreAudio)

set(XdevLAudioCoreAudioLibrary XdevLAudioCoreAudio)

set(HEADERS_DIR ${XDEVL_PLUGINS}/XdevLAudio)
set(SRC_DIR ${XDEVL_PLUGINS}/XdevLAudio)

set(XDEVLCOREAUDIO_PLUGIN_MAJOR_VERSION 0)
set(XDEVLCOREAUDIO_PLUGIN_MINOR_VERSION 1)
set(XDEVLCOREAUDIO_PLUGIN_PATCH_VERSION 0)
set(XDEVLCOREAUDIO_PLUGIN_VERSION "${XDEVLCOREAUDIO_PLUGIN_MAJOR_VERSION}.${XDEVLCOREAUDIO_PLUGIN_MINOR_VERSION}.${XDEVLCOREAUDIO_PLUGIN_PATCH_VERSION}")

add_definitions(
	-DXDEVLCOREAUDIO_PLUGIN_MAJOR_VERSION=${XDEVLCOREAUDIO_PLUGIN_MAJOR_VERSION}
	-DXDEVLCOREAUDIO_PLUGIN_MINOR_VERSION=${XDEVLCOREAUDIO_PLUGIN_MINOR_VERSION}
	-DXDEVLCOREAUDIO_PLUGIN_PATCH_VERSION=${XDEVLCOREAUDIO_PLUGIN_PATCH_VERSION}
)

set(XDEVLCOREAUDIO_MODULE_MAJOR_VERSION 0)
set(XDEVLCOREAUDIO_MODULE_MINOR_VERSION 1)
set(XDEVLCOREAUDIO_MODULE_PATCH_VERSION 0)
set(XDEVLCOREAUDIO_MODULE_VERSION "${XDEVLCOREAUDIO_MODULE_MAJOR_VERSION}.${XDEVLCOREAUDIO_MODULE_MINOR_VERSION}.${XDEVLCOREAUDIO_MODULE_PATCH_VERSION}")

add_definitions(
	-DXDEVLCOREAUDIO_MODULE_MAJOR_VERSION=${XDEVLCOREAUDIO_MODULE_MAJOR_VERSION}
	-DXDEVLCOREAUDIO_MODULE_MINOR_VERSION=${XDEVLCOREAUDIO_MODULE_MINOR_VERSION}
	-DXDEVLCOREAUDIO_MODULE_PATCH_VERSION=${XDEVLCOREAUDIO_MODULE_PATCH_VERSION}
)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY  ${XDEVL_PLUGINS}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${XDEVL_PLUGINS}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${XDEVL_PLUGINS}/lib)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY  ${XDEVL_PLUGINS}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG  ${XDEVL_PLUGINS}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE  ${XDEVL_PLUGINS}/lib)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY  ${XDEVL_PLUGINS}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG  ${XDEVL_PLUGINS}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${XDEVL_PLUGINS}/lib)

set(HEADER_INTERFACE_FILE ${HEADERS_DIR}/XdevLAudio.h)

set(HEADER_FILES
	${HEADER_INTERFACE_FILE}
	${HEADERS_DIR}/XdevLAudioCoreAudio/XdevLAudioCoreAudio.h
)

set(SOURCE_FILES
	${SRC_DIR}/XdevLAudioCoreAudio/XdevLAudioCoreAudio.cpp
)

include_directories(
	${XDEVL_HOME}/include
	${XDEVL_PLUGINS}
)

link_directories(
	${XDEVL_HOME}/lib
	${XDEVL_EXTERNALS}/lib
)
if(PLATFORM_MACOSX)
	set( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} -F${XDEVL_EXTERNALS}/lib")
endif()

if(CMAKE_BUILD_TYPE MATCHES Debug)
	set(LIBS XdevLd "-framework CoreAudio" "-framework AudioUnit" "-framework AudioToolbox" "-framework CoreServices" "-framework CoreFoundation")
else()
	set(LIBS XdevL  "-framework CoreAudio" "-framework AudioUnit" "-framework AudioToolbox" "-framework CoreServices" "-framework CoreFoundation")
endif()


add_library(${XdevLAudioCoreAudioLibrary} SHARED
    ${HEADER_FILES}
    ${SOURCE_FILES}
)

target_link_libraries(${XdevLAudioCoreAudioLibrary} ${LIBS})

set_property(TARGET ${XdevLAudioCoreAudioLibrary} PROPERTY PREFIX "")

if(CMAKE_BUILD_TYPE MATCHES Debug)
set_property(TARGET ${XdevLAudioCoreAudioLibrary} PROPERTY SUFFIX "-${XDEVLCOREAUDIO_PLUGIN_VERSION}d${XDEVL_SHARED_LIBRARY_FILE_EXTENSION}")
else()
set_property(TARGET ${XdevLAudioCoreAudioLibrary} PROPERTY SUFFIX "-${XDEVLCOREAUDIO_PLUGIN_VERSION}${XDEVL_SHARED_LIBRARY_FILE_EXTENSION}")
endif()

install(FILES ${HEADER_INTERFACE_FILE} DESTINATION "${XDEVL_PLUGINS_INCLUDE_INSTALL_PATH}/${PROJECT_NAME}")
install(TARGETS ${XdevLAudioCoreAudioLibrary} DESTINATION ${XDEVL_PLUGINS_INSTALL_PATH})

