cmake_minimum_required(VERSION 2.8)

project(XdevLImagePluginBMP)

set(XdevLImagePluginBMPLibrary XdevLImagePluginBMP)

set(HEADERS_DIR ${XDEVL_PLUGINS}/XdevLImage)
set(SRC_DIR ${XDEVL_PLUGINS}/XdevLImage)

set(XDEVLIMAGE_PLUGIN_MAJOR_VERSION 0)
set(XDEVLIMAGE_PLUGIN_MINOR_VERSION 1)
set(XDEVLIMAGE_PLUGIN_PATCH_VERSION 0)
set(XDEVLIMAGE_PLUGIN_VERSION "${XDEVLIMAGE_PLUGIN_MAJOR_VERSION}.${XDEVLIMAGE_PLUGIN_MINOR_VERSION}.${XDEVLIMAGE_PLUGIN_PATCH_VERSION}")

add_definitions(
	-DXDEVLIMAGE_PLUGIN_MAJOR_VERSION=${XDEVLIMAGE_PLUGIN_MAJOR_VERSION}
	-DXDEVLIMAGE_PLUGIN_MINOR_VERSION=${XDEVLIMAGE_PLUGIN_MINOR_VERSION}
	-DXDEVLIMAGE_PLUGIN_PATCH_VERSION=${XDEVLIMAGE_PLUGIN_PATCH_VERSION}
)

set(XDEVLBMP_MODULE_MAJOR_VERSION 0)
set(XDEVLBMP_MODULE_MINOR_VERSION 1)
set(XDEVLBMP_MODULE_PATCH_VERSION 0)
set(XDEVLBMP_MODULE_VERSION "${XDEVLBMP_MODULE_MAJOR_VERSION}.${XDEVLBMP_MODULE_MINOR_VERSION}.${XDEVLBMP_MODULE_PATCH_VERSION}")

add_definitions(
	-DXDEVLBMP_MODULE_MAJOR_VERSION=${XDEVLBMP_MODULE_MAJOR_VERSION}
	-DXDEVLBMP_MODULE_MINOR_VERSION=${XDEVLBMP_MODULE_MINOR_VERSION}
	-DXDEVLBMP_MODULE_PATCH_VERSION=${XDEVLBMP_MODULE_PATCH_VERSION}
)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY  ${XDEVL_PLUGINS}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${XDEVL_PLUGINS}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${XDEVL_PLUGINS}/lib)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY  ${XDEVL_PLUGINS}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG  ${XDEVL_PLUGINS}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE  ${XDEVL_PLUGINS}/lib)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY  ${XDEVL_PLUGINS}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG  ${XDEVL_PLUGINS}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${XDEVL_PLUGINS}/lib)

set(HEADER_INTERFACE_FILE ${HEADERS_DIR}/XdevLImage.h)

set(HEADER_FILES
	${HEADER_INTERFACE_FILE}
	${XdevLImagePluginBMP_SOURCE_DIR}/XdevLImagePluginBMP.h
)

set(SOURCE_FILES
	${XdevLImagePluginBMP_SOURCE_DIR}//XdevLImagePluginBMP.cpp
)

include_directories(
	${XDEVL_HOME}/include
	${XDEVL_PLUGINS}
)

link_directories(
	${XDEVL_HOME}/lib
	${XDEVL_EXTERNALS}/lib
)
if(PLATFORM_MACOSX)
	set( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} -F${XDEVL_EXTERNALS}/lib")
endif()

if(CMAKE_BUILD_TYPE MATCHES Debug)
	set(LIBS XdevLd)
else()
	set(LIBS XdevL)
endif()

if(PLATFORM_MACOSX)
	set(LIBS ${LIBS} dl)
elseif(PLATFORM_LINUX)
	set(LIBS ${LIBS} dl)
elseif(PLATFORM_WINDOWS)

endif()

add_library(${XdevLImagePluginBMPLibrary} SHARED
    ${HEADER_FILES}
    ${SOURCE_FILES}
)

target_link_libraries(${XdevLImagePluginBMPLibrary} ${LIBS})

set_property(TARGET ${XdevLImagePluginBMPLibrary} PROPERTY PREFIX "")

if(CMAKE_BUILD_TYPE MATCHES Debug)
set_property(TARGET ${XdevLImagePluginBMPLibrary} PROPERTY SUFFIX "-${XDEVLIMAGE_PLUGIN_VERSION}d${XDEVL_SHARED_LIBRARY_FILE_EXTENSION}")
else()
set_property(TARGET ${XdevLImagePluginBMPLibrary} PROPERTY SUFFIX "-${XDEVLIMAGE_PLUGIN_VERSION}${XDEVL_SHARED_LIBRARY_FILE_EXTENSION}")
endif()

install(FILES ${HEADER_INTERFACE_FILE} DESTINATION "${XDEVL_PLUGINS_INCLUDE_INSTALL_PATH}/${PROJECT_NAME}")
install(TARGETS ${XdevLImagePluginBMPLibrary} DESTINATION ${XDEVL_PLUGINS_INSTALL_PATH})

