cmake_minimum_required(VERSION 2.8)

project(XdevLOpenGLContextEGL)

set(XdevLOpenGLContextEGLLibrary XdevLOpenGLContextEGL)

set(HEADERS_DIR ${XDEVL_PLUGINS}/XdevLOpenGLContext)
set(SRC_DIR ${XDEVL_PLUGINS}/XdevLOpenGLContext)

set(XDEVLOPENGLCONTEXTEGL_PLUGIN_MAJOR_VERSION 0)
set(XDEVLOPENGLCONTEXTEGL_PLUGIN_MINOR_VERSION 1)
set(XDEVLOPENGLCONTEXTEGL_PLUGIN_PATCH_VERSION 0)
set(XDEVLOPENGLCONTEXTEGL_PLUGIN_VERSION "${XDEVLOPENGLCONTEXTEGL_PLUGIN_MAJOR_VERSION}.${XDEVLOPENGLCONTEXTEGL_PLUGIN_MINOR_VERSION}.${XDEVLOPENGLCONTEXTEGL_PLUGIN_PATCH_VERSION}")

add_definitions(
	-DXDEVLOPENGLCONTEXTEGL_PLUGIN_MAJOR_VERSION=${XDEVLOPENGLCONTEXTEGL_PLUGIN_MAJOR_VERSION}
	-DXDEVLOPENGLCONTEXTEGL_PLUGIN_MINOR_VERSION=${XDEVLOPENGLCONTEXTEGL_PLUGIN_MINOR_VERSION}
	-DXDEVLOPENGLCONTEXTEGL_PLUGIN_PATCH_VERSION=${XDEVLOPENGLCONTEXTEGL_PLUGIN_PATCH_VERSION}
)

set(XDEVLOPENGLCONTEXTEGL_MODULE_MAJOR_VERSION 0)
set(XDEVLOPENGLCONTEXTEGL_MODULE_MINOR_VERSION 1)
set(XDEVLOPENGLCONTEXTEGL_MODULE_PATCH_VERSION 0)
set(XDEVLOPENGLCONTEXTEGL_MODULE_VERSION "${XDEVLOPENGLCONTEXTEGL_MODULE_MAJOR_VERSION}.${XDEVLOPENGLCONTEXTEGL_MODULE_MINOR_VERSION}.${XDEVLOPENGLCONTEXTEGL_MODULE_PATCH_VERSION}")

add_definitions(
	-DXDEVLOPENGLCONTEXTEGL_MODULE_MAJOR_VERSION=${XDEVLOPENGLCONTEXTEGL_MODULE_MAJOR_VERSION}
	-DXDEVLOPENGLCONTEXTEGL_MODULE_MINOR_VERSION=${XDEVLOPENGLCONTEXTEGL_MODULE_MINOR_VERSION}
	-DXDEVLOPENGLCONTEXTEGL_MODULE_PATCH_VERSION=${XDEVLOPENGLCONTEXTEGL_MODULE_PATCH_VERSION}
)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY  ${XDEVL_PLUGINS}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${XDEVL_PLUGINS}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${XDEVL_PLUGINS}/lib)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY  ${XDEVL_PLUGINS}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG  ${XDEVL_PLUGINS}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE  ${XDEVL_PLUGINS}/lib)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY  ${XDEVL_PLUGINS}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG  ${XDEVL_PLUGINS}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${XDEVL_PLUGINS}/lib)

set(HEADER_INTERFACE_FILE ${HEADERS_DIR}/XdevLOpenGLContext.h)

set(HEADER_FILES
	${HEADER_INTERFACE_FILE}
	${HEADERS_DIR}/XdevLOpenGLContextEGL/XdevLOpenGLContextEGL.h
)

set(SOURCE_FILES
	${SRC_DIR}/XdevLOpenGLContextEGL/XdevLOpenGLContextEGL.cpp
)

include_directories(
	${XDEVL_HOME}/include
	${XDEVL_PLUGINS}
)

link_directories(
	${XDEVL_HOME}/lib
	${XDEVL_EXTERNALS}/lib
)
if(PLATFORM_MACOSX)
	set( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} -F${XDEVL_EXTERNALS}/lib")
endif()

if(CMAKE_BUILD_TYPE MATCHES Debug)
	set(LIBS XdevLd)
else()
	set(LIBS XdevL)
endif()

if(PLATFORM_MACOSX)
	set(LIBS ${LIBS} dl)
elseif(PLATFORM_LINUX)
	set(LIBS ${LIBS} dl GLESv2 EGL)
elseif(PLATFORM_WINDOWS)

endif()

add_library(${XdevLOpenGLContextEGLLibrary} SHARED
    ${HEADER_FILES}
    ${SOURCE_FILES}
)

target_link_libraries(${XdevLOpenGLContextEGLLibrary} ${LIBS})

set_property(TARGET ${XdevLOpenGLContextEGLLibrary} PROPERTY PREFIX "")

if(CMAKE_BUILD_TYPE MATCHES Debug)
set_property(TARGET ${XdevLOpenGLContextEGLLibrary} PROPERTY SUFFIX "-${XDEVLOPENGLCONTEXTEGL_PLUGIN_VERSION}d${XDEVL_SHARED_LIBRARY_FILE_EXTENSION}")
else()
set_property(TARGET ${XdevLOpenGLContextEGLLibrary} PROPERTY SUFFIX "-${XDEVLOPENGLCONTEXTEGL_PLUGIN_VERSION}${XDEVL_SHARED_LIBRARY_FILE_EXTENSION}")
endif()

install(FILES ${HEADER_INTERFACE_FILE} DESTINATION "${XDEVL_PLUGINS_INCLUDE_INSTALL_PATH}/${PROJECT_NAME}")
install(TARGETS ${XdevLOpenGLContextEGLLibrary} DESTINATION ${XDEVL_PLUGINS_INSTALL_PATH})
